--- a/next.html
+++ b/next.html
@@ -9,7 +9,7 @@
             justify-content: center;
             align-items: center;
         }
-        iframe{
+        video{
             border-radius: 20px;
         }
     </style>
@@ -18,6 +18,6 @@
     <title>Phonk</title>
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/vvEUzQCrUX0?si=lgM2wSfLZy9IxUIB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <video width="560" height="315" src="pho.mp4" title="YouTube video player"controls ></video>
 </body>
 </html>
